public/frontend/css/custom.css
/* ... */
 .animate-card.show {
     opacity: 1;
     transform: scale(1) translateY(0);
 }

 .animate-card {
     transition-delay: var(--delay, 0ms);
 }




 /* Baaqi CSS yahan se shuru karein */


 /*============= Navbar css============== */
 /* .navbar {
     height: 180px;
     position: relative;
     padding: 0;
 } */

 .navbar-brand {
     display: flex;
     align-items: center;
     justify-content: center;
     padding-left: 0;
     width: 15%;
 }

 .nav-logo {
     width: 100%;
     max-width: 200px;
     height: 150px;
     object-fit: contain;
     margin-top: -10px;
 }

 .navbar {
     height: 150px;
 }

 @media (max-width: 1024px) {
     .navbar-brand {
         padding-left: 0;
         justify-content: center;
     }
 }

 @media (max-width: 768px) {
     .navbar-brand {
         padding-left: 30px !important;
         justify-content: center;
     }
 }

 @media(max-width:768px) {
     .site-header {
         box-shadow: 0 0 5px #000000;
     }
     .nav-link {
         margin-left: 0px !important;
     }
 }

 .site-header.hide-header {
     transform: translateY(-100%);
 }

 .site-header.show-header {
     transform: translateY(0);
 }

 @media (max-width: 576px) {
     /* .mega-menu {
         padding: 15px 10px;
         border-radius: 8px;
     } */

     .navbar-brand {
         justify-content: center;
     }

     .nav-logo {
         height: 90px !important;
         width: 90px;
     }

 }

 /* .nav-logo {
     height: 100%;
     width: 200px;
     max-height: 137px;
     object-fit: contain;
 } */

 .blue-block {
     position: absolute;
     top: 0;
     right: 0;
     background: #0071A8;
     height: 127px;
     display: flex;
     align-items: center;
     padding-right: 20px;
     width: 85%;
     border-bottom-left-radius: 37px;
     z-index: 3 !important;
 }

 .blue-block li {
     margin-left: 20px;
     gap: 10px;
 }

 @media(max-width:1024px) {
     .blue-block li {
         margin-left: 30px;
         gap: 15px;
     }
 }

 .nav-link {
     font-weight: 600;
     color: white !important;
     font-size: 20px;
     display: flex;
     align-items: center;
     gap: 5px;
     transition: all 0.4s ease-in-out;
     margin-left: 50px;
 }

 .nav-link:hover {
     transform: scale(1.05);
 }

 .icon-style {
     font-size: 28px;
     color: white;
 }

 .contact-btn {
     background-color: #D43838;
     color: white;
     font-weight: 600;
     border-radius: 10px;
     font-size: 20px;
     height: 41px;
     box-shadow: 0px 4px 5px #00000040;

     width: 130px;
     font-family: Inter, sans-serif;
     clip-path: polygon(0% 0%,
             100% 0%,
             100% 100%,
             0% 100%);
     transition: all 0.4s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
 }

 .contact-btn:hover {
     background-color: #c33333;
     color: white;
     clip-path: polygon(12% 0%,
             100% 0%,
             88% 100%,
             0% 100%);

 }

 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%280,0,0,0.7%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }


 .mega-menu {
     position: fixed;
     top: 119px;
     left: 50.5%;
     transform: translateX(-50%);
     width: 85vw;
     background: linear-gradient(90deg, #006A9E, #658392);
     color: white;
     padding: 30px;
     border-radius: 15px;
     z-index: 9999;

     display: none;
     /* 👈 no animation */
 }


 /* SHOW STATE */
 .has-mega.show .mega-menu {
     display: block;
     /* 👈 instant show */
 }

 .mega-force-hide .mega-menu {
     display: none !important;
 }

 /* icon rotate */
 .dropdown-icon {
     transition: transform 0.3s ease;
 }

 .has-mega.show .dropdown-icon {
     transform: rotate(180deg);
 }




 .has-mega {
     position: static;
 }

 @media (min-width: 992px) {
     .has-mega:hover>.mega-menu {
         display: block;
     }

     .has-mega:hover .dropdown-icon {
         transform: rotate(180deg);
     }
 }

 .nav-repair-title {
     display: inline-flex;
     align-items: center;
     gap: 10px;
     font-family: Saira;
     font-weight: 700;
     font-size: 20px;
     cursor: pointer;
     line-height: 137%;
     color: #000000;
     position: relative;

 }

 .city-repair-title {
     display: inline-flex;
     align-items: center;
     gap: 10px;
     font-family: Saira;
     font-weight: 700;
     font-size: 20px;
     cursor: pointer;
     line-height: 137%;
     color: #000000;
     position: relative;
 }

 .city-repair-title a {
     font-size: 20px !important;
     color: #000000 !important;

 }

 .city-repair-title::after {
     content: "";
     position: absolute;
     left: 50%;
     bottom: -4px;

     width: 0;
     height: 2px;
     background-color: #E9A426;

     transform: translateX(-50%);
     transition: width 0.35s eas
 }

 .city-repair-title::after {
     width: calc(100% - 0px);
 }

 .nav-repair-title::after {
     content: "";
     position: absolute;
     left: 50%;
     bottom: -4px;
     width: 0;
     height: 2px;
     background-color: #E9A426;
     transform: translateX(-50%);
     transition: width 0.35s ease;
 }

 .nav-repair-title:hover::after {
     width: 100%;
 }

 .nav-repair-title i {
     /* opacity: 0; */
     transform: translateX(-5px);
     transition: all 0.3s ease;
     font-size: 18px;
     color: #000000;

     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 3px;
 }


 .nav-title {
     font-family: Saira;
     font-weight: 700;
     font-size: 14px;
     line-height: 137%;
     color: #FFFFFF;
     margin-top: 10px;

     position: relative;
     display: inline-block;
     cursor: pointer;
     max-width: 176px;
 }
/* ... */

